--- a/docs/index.yaml
+++ b/docs/index.yaml
@@ -680,6 +680,8 @@ components:
       type: object
       properties:
         results:
+          minItems: 1
+          maxItems: 50
           type: array
           items:
             $ref: '#/components/schemas/Result'
