- Load local environment variables for Makefile

--- a/.env.sample
+++ b/.env.sample
@@ -6,12 +6,7 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
-POSTGRES_HOST=
 NODE_ENV=
 NODE_PORT=
-STUDIO_PORT=
+API_VER=
 DATABASE_URL=
